[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
license = "AGPL-3.0+"
name = "turbofish"
repository = "https://github.com/btwiuse/turbofish.rs"
version = "0.1.0"
edition = "2018"

[dependencies]
percent-encoding = "2.1"
rand = "0.8"
rocket = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
features = ["tera_templates"]
