[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
license = "AGPL-3.0+"
name = "turbofish"
repository = "https://github.com/btwiuse/turbofish.rs"
version = "0.1.0"
edition = "2018"

[dependencies]
percent-encoding = "2.1"
rand = "0.8"
rocket = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
features = ["tera_templates"]

[package.metadata.raze]
default_gen_buildrs = true
rust_rules_workspace_name = "io_bazel_rules_rust"

# The path relative path to the Bazel workspace root (location of
# WORKSPACE.bazel/WORKSPACE file). If no workspace file is found,
# the current working directory is used.
workspace_path = "//cargo"

package_aliases_dir = "cargo"

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to idnicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Vendored"
